closes #25,#26: html specifies column width of tables to stop overflowing

--- a/gluuwebui/static/css/style.css
+++ b/gluuwebui/static/css/style.css
@@ -108,3 +108,8 @@ pre{
 .st-sort-descent:after{
     content: '\25BC';
 }
+
+table {
+    table-layout: fixed;
+    word-wrap: break-word;
+}
